tests/paczka1/small_fuzzy/81192965.err
Error in line 11: Nvir S774 79,7
Error in line 9: cKu A272 174,5
